:zap: update agent api - remove register feature
